# fasta

./: .gitignore  CMakeLists.txt  README.md  fasta-config.cmake.in
.github/workflows/: test.yml
include/fasta/: rc.h  tok.h
src/: aux.h  error.c  error.h  fasta.c  fsm.c  fsm.h  tok.c  tok.h
src/fasta/: aux.h  error.h  fasta.h  target.h
test/: CMakeLists.txt  fasta_read.c  fasta_write.c
test/assets/: desired_mix.fa  example.faa  no_newline_end.fa
